// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/conversations/demo/basic.tsx extend context correctly 1`] = `
<ul
  class="ant-conversations"
  style="width: 256px; background: #ffffff; border-radius: 6px;"
>
  <li
    aria-describedby="test-id"
    class="ant-conversations-item ant-conversations-item-active"
  >
    <span
      aria-label="Conversation Item 1"
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      Conversation Item 1
    </span>
  </li>
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tooltip-content"
    >
      <div
        class="ant-tooltip-inner"
        id="test-id"
        role="tooltip"
      >
        Conversation Item 1
      </div>
    </div>
  </div>
  <li
    aria-describedby="test-id"
    class="ant-conversations-item"
  >
    <span
      aria-label="Conversation Item 2"
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      Conversation Item 2
    </span>
  </li>
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tooltip-content"
    >
      <div
        class="ant-tooltip-inner"
        id="test-id"
        role="tooltip"
      >
        Conversation Item 2
      </div>
    </div>
  </div>
  <li
    aria-describedby="test-id"
    class="ant-conversations-item"
  >
    <span
      aria-label="Conversation Item 3"
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      Conversation Item 3
    </span>
  </li>
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tooltip-content"
    >
      <div
        class="ant-tooltip-inner"
        id="test-id"
        role="tooltip"
      >
        Conversation Item 3
      </div>
    </div>
  </div>
  <li
    aria-describedby="test-id"
    class="ant-conversations-item ant-conversations-item-disabled"
  >
    <span
      aria-label="Conversation Item 4"
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      Conversation Item 4
    </span>
  </li>
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-arrow"
      style="position: absolute; top: 0px; left: 0px;"
    />
    <div
      class="ant-tooltip-content"
    >
      <div
        class="ant-tooltip-inner"
        id="test-id"
        role="tooltip"
      >
        Conversation Item 4
      </div>
    </div>
  </div>
</ul>
`;

exports[`renders components/conversations/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/conversations/demo/controlled-mode.tsx extend context correctly 1`] = `
<div
  class="ant-flex ant-flex-align-flex-start ant-flex-gap-small ant-flex-vertical"
>
  <ul
    class="ant-conversations"
    style="width: 256px; background: #ffffff; border-radius: 6px;"
  >
    <li
      aria-describedby="test-id"
      class="ant-conversations-item ant-conversations-item-active"
    >
      <span
        aria-label="Conversation Item 1"
        class="ant-typography ant-typography-ellipsis ant-conversations-label"
      >
        Conversation Item 1
      </span>
    </li>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          id="test-id"
          role="tooltip"
        >
          Conversation Item 1
        </div>
      </div>
    </div>
    <li
      aria-describedby="test-id"
      class="ant-conversations-item"
    >
      <span
        aria-label="Conversation Item 2"
        class="ant-typography ant-typography-ellipsis ant-conversations-label"
      >
        Conversation Item 2
      </span>
    </li>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          id="test-id"
          role="tooltip"
        >
          Conversation Item 2
        </div>
      </div>
    </div>
    <li
      aria-describedby="test-id"
      class="ant-conversations-item"
    >
      <span
        aria-label="Conversation Item 3"
        class="ant-typography ant-typography-ellipsis ant-conversations-label"
      >
        Conversation Item 3
      </span>
    </li>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          id="test-id"
          role="tooltip"
        >
          Conversation Item 3
        </div>
      </div>
    </div>
  </ul>
  <div
    class="ant-flex ant-flex-gap-small"
  >
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Active First
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Active Last
      </span>
    </button>
  </div>
</div>
`;

exports[`renders components/conversations/demo/controlled-mode.tsx extend context correctly 2`] = `[]`;

exports[`renders components/conversations/demo/group.tsx extend context correctly 1`] = `
<ul
  class="ant-conversations"
  style="width: 256px; background: #ffffff; border-radius: 6px;"
>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography"
      >
        Group1
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        aria-describedby="test-id"
        class="ant-conversations-item ant-conversations-item-active"
      >
        <span
          aria-label="Conversation Item 1"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation Item 1
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation Item 1
          </div>
        </div>
      </div>
      <li
        aria-describedby="test-id"
        class="ant-conversations-item"
      >
        <span
          aria-label="Conversation Item 2"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation Item 2
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation Item 2
          </div>
        </div>
      </div>
      <li
        aria-describedby="test-id"
        class="ant-conversations-item"
      >
        <span
          aria-label="Conversation Item 3"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation Item 3
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation Item 3
          </div>
        </div>
      </div>
    </ul>
  </li>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography"
      >
        Group2
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        aria-describedby="test-id"
        class="ant-conversations-item ant-conversations-item-disabled"
      >
        <span
          aria-label="Conversation Item 4"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation Item 4
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation Item 4
          </div>
        </div>
      </div>
    </ul>
  </li>
</ul>
`;

exports[`renders components/conversations/demo/group.tsx extend context correctly 2`] = `[]`;

exports[`renders components/conversations/demo/group-sort.tsx extend context correctly 1`] = `
<ul
  class="ant-conversations"
  style="width: 256px; background: #ffffff; border-radius: 6px;"
>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              aria-label="comment"
              class="anticon anticon-comment"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="comment"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M573 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40zm-280 0c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                />
                <path
                  d="M894 345a343.92 343.92 0 00-189-130v.1c-17.1-19-36.4-36.5-58-52.1-163.7-119-393.5-82.7-513 81-96.3 133-92.2 311.9 6 439l.8 132.6c0 3.2.5 6.4 1.5 9.4a31.95 31.95 0 0040.1 20.9L309 806c33.5 11.9 68.1 18.7 102.5 20.6l-.5.4c89.1 64.9 205.9 84.4 313 49l127.1 41.4c3.2 1 6.5 1.6 9.9 1.6 17.7 0 32-14.3 32-32V753c88.1-119.6 90.4-284.9 1-408zM323 735l-12-5-99 31-1-104-8-9c-84.6-103.2-90.2-251.9-11-361 96.4-132.2 281.2-161.4 413-66 132.2 96.1 161.5 280.6 66 412-80.1 109.9-223.5 150.5-348 102zm505-17l-8 10 1 104-98-33-12 5c-56 20.8-115.7 22.5-171 7l-.2-.1A367.31 367.31 0 00729 676c76.4-105.3 88.8-237.6 44.4-350.4l.6.4c23 16.5 44.1 37.1 62 62 72.6 99.6 68.5 235.2-8 330z"
                />
                <path
                  d="M433 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              Today
            </span>
          </div>
        </div>
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        aria-describedby="test-id"
        class="ant-conversations-item"
      >
        <span
          aria-label="Conversation 1732204800000"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation 1732204800000
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation 1732204800000
          </div>
        </div>
      </div>
      <li
        aria-describedby="test-id"
        class="ant-conversations-item"
      >
        <span
          aria-label="Conversation 1732204803600"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation 1732204803600
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation 1732204803600
          </div>
        </div>
      </div>
      <li
        aria-describedby="test-id"
        class="ant-conversations-item"
      >
        <span
          aria-label="Conversation 1732204807200"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation 1732204807200
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation 1732204807200
          </div>
        </div>
      </div>
      <li
        aria-describedby="test-id"
        class="ant-conversations-item"
      >
        <span
          aria-label="Conversation 1732204810800"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation 1732204810800
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation 1732204810800
          </div>
        </div>
      </div>
    </ul>
  </li>
  <li>
    <div
      class="ant-conversations-group-title"
    >
      <span
        class="ant-typography"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small"
        >
          <div
            class="ant-space-item"
          >
            <span
              aria-label="comment"
              class="anticon anticon-comment"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="comment"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <defs>
                  <style />
                </defs>
                <path
                  d="M573 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40zm-280 0c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                />
                <path
                  d="M894 345a343.92 343.92 0 00-189-130v.1c-17.1-19-36.4-36.5-58-52.1-163.7-119-393.5-82.7-513 81-96.3 133-92.2 311.9 6 439l.8 132.6c0 3.2.5 6.4 1.5 9.4a31.95 31.95 0 0040.1 20.9L309 806c33.5 11.9 68.1 18.7 102.5 20.6l-.5.4c89.1 64.9 205.9 84.4 313 49l127.1 41.4c3.2 1 6.5 1.6 9.9 1.6 17.7 0 32-14.3 32-32V753c88.1-119.6 90.4-284.9 1-408zM323 735l-12-5-99 31-1-104-8-9c-84.6-103.2-90.2-251.9-11-361 96.4-132.2 281.2-161.4 413-66 132.2 96.1 161.5 280.6 66 412-80.1 109.9-223.5 150.5-348 102zm505-17l-8 10 1 104-98-33-12 5c-56 20.8-115.7 22.5-171 7l-.2-.1A367.31 367.31 0 00729 676c76.4-105.3 88.8-237.6 44.4-350.4l.6.4c23 16.5 44.1 37.1 62 62 72.6 99.6 68.5 235.2-8 330z"
                />
                <path
                  d="M433 421c-23.1 0-41 17.9-41 40s17.9 40 41 40c21.1 0 39-17.9 39-40s-17.9-40-39-40z"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              Yesterday
            </span>
          </div>
        </div>
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        aria-describedby="test-id"
        class="ant-conversations-item"
      >
        <span
          aria-label="Conversation 1732204728000"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation 1732204728000
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation 1732204728000
          </div>
        </div>
      </div>
      <li
        aria-describedby="test-id"
        class="ant-conversations-item"
      >
        <span
          aria-label="Conversation 1732204731600"
          class="ant-typography ant-typography-ellipsis ant-conversations-label"
        >
          Conversation 1732204731600
        </span>
      </li>
      <div
        class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
      >
        <div
          class="ant-tooltip-arrow"
          style="position: absolute; top: 0px; left: 0px;"
        />
        <div
          class="ant-tooltip-content"
        >
          <div
            class="ant-tooltip-inner"
            id="test-id"
            role="tooltip"
          >
            Conversation 1732204731600
          </div>
        </div>
      </div>
    </ul>
  </li>
</ul>
`;

exports[`renders components/conversations/demo/group-sort.tsx extend context correctly 2`] = `[]`;

exports[`renders components/conversations/demo/infinite-load.tsx extend context correctly 1`] = `
<div
  id="scrollableDiv"
  style="width: 280px; height: 600px; background: #ffffff; border-radius: 6px; overflow: auto;"
>
  <div
    class="infinite-scroll-component__outerdiv"
  >
    <div
      class="infinite-scroll-component "
      style="height: auto; overflow: hidden;"
    >
      <ul
        class="ant-conversations"
      />
      <div
        style="text-align: center;"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-sm ant-spin-spinning"
        >
          <span
            aria-label="redo"
            class="anticon anticon-redo anticon-spin ant-spin-dot"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="redo"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M758.2 839.1C851.8 765.9 912 651.9 912 523.9 912 303 733.5 124.3 512.6 124 291.4 123.7 112 302.8 112 523.9c0 125.2 57.5 236.9 147.6 310.2 3.5 2.8 8.6 2.2 11.4-1.3l39.4-50.5c2.7-3.4 2.1-8.3-1.2-11.1-8.1-6.6-15.9-13.7-23.4-21.2a318.64 318.64 0 01-68.6-101.7C200.4 609 192 567.1 192 523.9s8.4-85.1 25.1-124.5c16.1-38.1 39.2-72.3 68.6-101.7 29.4-29.4 63.6-52.5 101.7-68.6C426.9 212.4 468.8 204 512 204s85.1 8.4 124.5 25.1c38.1 16.1 72.3 39.2 101.7 68.6 29.4 29.4 52.5 63.6 68.6 101.7 16.7 39.4 25.1 81.3 25.1 124.5s-8.4 85.1-25.1 124.5a318.64 318.64 0 01-68.6 101.7c-9.3 9.3-19.1 18-29.3 26L668.2 724a8 8 0 00-14.1 3l-39.6 162.2c-1.2 5 2.6 9.9 7.7 9.9l167 .8c6.7 0 10.5-7.7 6.3-12.9l-37.3-47.9z"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/conversations/demo/infinite-load.tsx extend context correctly 2`] = `[]`;

exports[`renders components/conversations/demo/with-menu.tsx extend context correctly 1`] = `
<div
  class="ant-app"
>
  <ul
    class="ant-conversations"
    style="width: 256px; background: #ffffff; border-radius: 6px;"
  >
    <li
      aria-describedby="test-id"
      class="ant-conversations-item ant-conversations-item-active"
    >
      <span
        aria-label="Conversation Item 1"
        class="ant-typography ant-typography-ellipsis ant-conversations-label"
      >
        Conversation Item 1
      </span>
      <span
        aria-label="ellipsis"
        class="anticon anticon-ellipsis ant-dropdown-trigger ant-conversations-menu-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
      <div
        class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-dropdown-placement-bottomRight"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1150;"
      >
        <ul
          class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        >
          <li
            aria-describedby="test-id"
            class="ant-dropdown-menu-item"
            data-menu-id="rc-menu-uuid-test-operation1"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="edit"
              class="anticon anticon-edit ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 1
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
          <li
            aria-describedby="test-id"
            aria-disabled="true"
            class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled"
            data-menu-id="rc-menu-uuid-test-operation2"
            role="menuitem"
          >
            <span
              aria-label="stop"
              class="anticon anticon-stop ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="stop"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372 0-89 31.3-170.8 83.5-234.8l523.3 523.3C682.8 852.7 601 884 512 884zm288.5-137.2L277.2 223.5C341.2 171.3 423 140 512 140c205.4 0 372 166.6 372 372 0 89-31.3 170.8-83.5 234.8z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 2
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
          <li
            aria-describedby="test-id"
            class="ant-dropdown-menu-item ant-dropdown-menu-item-danger"
            data-menu-id="rc-menu-uuid-test-operation3"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="delete"
              class="anticon anticon-delete ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="delete"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 3
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
        </ul>
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
    </li>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          id="test-id"
          role="tooltip"
        >
          Conversation Item 1
        </div>
      </div>
    </div>
    <li
      aria-describedby="test-id"
      class="ant-conversations-item"
    >
      <span
        aria-label="Conversation Item 2"
        class="ant-typography ant-typography-ellipsis ant-conversations-label"
      >
        Conversation Item 2
      </span>
      <span
        aria-label="ellipsis"
        class="anticon anticon-ellipsis ant-dropdown-trigger ant-conversations-menu-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
      <div
        class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-dropdown-placement-bottomRight"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1150;"
      >
        <ul
          class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        >
          <li
            aria-describedby="test-id"
            class="ant-dropdown-menu-item"
            data-menu-id="rc-menu-uuid-test-operation1"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="edit"
              class="anticon anticon-edit ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 1
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
          <li
            aria-describedby="test-id"
            aria-disabled="true"
            class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled"
            data-menu-id="rc-menu-uuid-test-operation2"
            role="menuitem"
          >
            <span
              aria-label="stop"
              class="anticon anticon-stop ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="stop"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372 0-89 31.3-170.8 83.5-234.8l523.3 523.3C682.8 852.7 601 884 512 884zm288.5-137.2L277.2 223.5C341.2 171.3 423 140 512 140c205.4 0 372 166.6 372 372 0 89-31.3 170.8-83.5 234.8z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 2
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
          <li
            aria-describedby="test-id"
            class="ant-dropdown-menu-item ant-dropdown-menu-item-danger"
            data-menu-id="rc-menu-uuid-test-operation3"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="delete"
              class="anticon anticon-delete ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="delete"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 3
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
        </ul>
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
    </li>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          id="test-id"
          role="tooltip"
        >
          Conversation Item 2
        </div>
      </div>
    </div>
    <li
      aria-describedby="test-id"
      class="ant-conversations-item"
    >
      <span
        aria-label="Conversation Item 3"
        class="ant-typography ant-typography-ellipsis ant-conversations-label"
      >
        Conversation Item 3
      </span>
      <span
        aria-label="ellipsis"
        class="anticon anticon-ellipsis ant-dropdown-trigger ant-conversations-menu-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          data-icon="ellipsis"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
          />
        </svg>
      </span>
      <div
        class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-dropdown-placement-bottomRight"
        style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1150;"
      >
        <ul
          class="ant-dropdown-menu ant-dropdown-menu-root ant-dropdown-menu-vertical ant-dropdown-menu-light"
          data-menu-list="true"
          role="menu"
          tabindex="0"
        >
          <li
            aria-describedby="test-id"
            class="ant-dropdown-menu-item"
            data-menu-id="rc-menu-uuid-test-operation1"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="edit"
              class="anticon anticon-edit ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="edit"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 1
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
          <li
            aria-describedby="test-id"
            aria-disabled="true"
            class="ant-dropdown-menu-item ant-dropdown-menu-item-disabled"
            data-menu-id="rc-menu-uuid-test-operation2"
            role="menuitem"
          >
            <span
              aria-label="stop"
              class="anticon anticon-stop ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="stop"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372 0-89 31.3-170.8 83.5-234.8l523.3 523.3C682.8 852.7 601 884 512 884zm288.5-137.2L277.2 223.5C341.2 171.3 423 140 512 140c205.4 0 372 166.6 372 372 0 89-31.3 170.8-83.5 234.8z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 2
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
          <li
            aria-describedby="test-id"
            class="ant-dropdown-menu-item ant-dropdown-menu-item-danger"
            data-menu-id="rc-menu-uuid-test-operation3"
            role="menuitem"
            tabindex="-1"
          >
            <span
              aria-label="delete"
              class="anticon anticon-delete ant-dropdown-menu-item-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="delete"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                />
              </svg>
            </span>
            <span
              class="ant-dropdown-menu-title-content"
            >
              Operation 3
            </span>
          </li>
          <div
            class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-dropdown-menu-inline-collapsed-tooltip ant-tooltip-placement-right"
            style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; z-index: 1250;"
          >
            <div
              class="ant-tooltip-arrow"
              style="position: absolute; top: 0px; left: 0px;"
            />
            <div
              class="ant-tooltip-content"
            >
              <div
                class="ant-tooltip-inner"
                id="test-id"
                role="tooltip"
              />
            </div>
          </div>
        </ul>
        <div
          aria-hidden="true"
          style="display: none;"
        />
      </div>
    </li>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          id="test-id"
          role="tooltip"
        >
          Conversation Item 3
        </div>
      </div>
    </div>
    <li
      aria-describedby="test-id"
      class="ant-conversations-item ant-conversations-item-disabled"
    >
      <span
        aria-label="Conversation Item 4"
        class="ant-typography ant-typography-ellipsis ant-conversations-label"
      >
        Conversation Item 4
      </span>
    </li>
    <div
      class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-placement-right"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="ant-tooltip-arrow"
        style="position: absolute; top: 0px; left: 0px;"
      />
      <div
        class="ant-tooltip-content"
      >
        <div
          class="ant-tooltip-inner"
          id="test-id"
          role="tooltip"
        >
          Conversation Item 4
        </div>
      </div>
    </div>
  </ul>
</div>
`;

exports[`renders components/conversations/demo/with-menu.tsx extend context correctly 2`] = `[]`;
